--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           <a href="https://github.com/Sands-45">Sands QA</a>. The source code is
           licensed
           <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. All
-          Rights Reserved, Copywrite&copy;
+          Rights Reserved, Copyright&copy;
           <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
             >Dial n' Dine 2021</a
           >.
