--- a/index.html
+++ b/index.html
@@ -344,11 +344,10 @@
       <div class="columns">
 
         <div class="column is-three-quarters">
-          <div class="sheet is-16by9">
-            <iframe class="has-ratio" width="640" height="400"
-              src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQDkxbi5_kjeUmqP0K5cMQm2NvkNPMUoRDeWxmYNmLQIsmQMsqGWkIlU0VfTShAMOnW3zyIh7ZuF_F0/pubhtml?widget=false&amp;headers=false&amp;chrome=false"
-              frameborder="0" allowfullscreen></iframe>
-          </div>
+            <iframe
+              src="https://docs.google.com/presentation/d/e/2PACX-1vQHIIaTWEelXaBsu_Yv4I1BY_0J5RCqi6pJxNAGExC6GZ2Y-yIaq2tCjT2ebY4zD1QVTqu3ekf5S5WW/embed?start=true&loop=true&delayms=10000"
+              frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true"
+              webkitallowfullscreen="true"></iframe>
         </div>
 
         <div class="column is-one-quarter">
@@ -364,7 +363,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus
               quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam,
               et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec
-              sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque.<br><br>
+              sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi<br><br>
               <p class="subtitle has-text-info">Tracking Progress</p>
               <progress class="progress has-text-danger is-info" value="45" max="100">45%</progress>
             </div>
